<resources>
    <string name="app_name">FinalExamApp</string>
    <string name="toast_message">Bienvenue sur FinalExamApp!</string>
    <string name="snackbar_message">Voici un exemple de Snackbar</string>
    <string name="notification_title">Notification FinalExamApp</string>
    <string name="notification_message">Bonjour, voici un exemple de notification.</string>

    <!-- Accessibility Content Descriptions -->
    <string name="title_content_description">Titre de l\'application FinalExamApp</string>
    <string name="custom_view_content_description">Vue personnalisée avec un fond cyan</string>
    <string name="button_snackbar_content_description">Afficher un message Snackbar</string>
    <string name="button_schedule_task_content_description">Planifier une tâche en arrière-plan</string>
    <string name="button_notification_content_description">Afficher une notification</string>
</resources>
