<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/title_content_description" />

    <com.example.finalexamapp.CustomView
        android:id="@+id/customView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:contentDescription="@string/custom_view_content_description"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/buttonSnackbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Afficher Snackbar"
        app:layout_constraintTop_toBottomOf="@id/customView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:contentDescription="@string/button_snackbar_content_description"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonScheduleTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Planifier une tâche"
        app:layout_constraintTop_toBottomOf="@id/buttonSnackbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:contentDescription="@string/button_schedule_task_content_description"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Afficher Notification"
        app:layout_constraintTop_toBottomOf="@id/buttonScheduleTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:contentDescription="@string/button_notification_content_description"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonNotification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your name"
            android:inputType="textPersonName"
            android:contentDescription="Input field for user's name"
            android:padding="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonInsertData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Insert Data"
        android:contentDescription="Insert data into the database"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonFetchData"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonFetchData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Fetch Data"
        android:contentDescription="Fetch data from the database"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
        app:layout_constraintStart_toEndOf="@id/buttonInsertData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginBottom="16dp"/>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/buttonFetchData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:padding="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
